workbench random color doesn't work if object display type is set as solid #69995

Closed
opened 2019-09-17 22:43:50 +02:00 by Paul Szajner · 5 comments

System Information
Operating system: Linux-4.19.0-5-amd64-x86_64-with-debian-10.0 64 Bits
Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.74

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5e
Worked: (optional)

Short description of error
When setting workbench engine to display random colors or objects color, if objects display type is set to solid they show white.
Capture du 2019-09-17 22-38-53.png

Exact steps for others to reproduce the error
bug_rnd_color.blend
Open the selected .blend and display random colors with the workbench engine.
The bottom row of cubes are white and the others one display random colors.

**System Information** Operating system: Linux-4.19.0-5-amd64-x86_64-with-debian-10.0 64 Bits Graphics card: GeForce GTX 780/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.74 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: `9609840b5e` Worked: (optional) **Short description of error** When setting workbench engine to display random colors or objects color, if objects display type is set to solid they show white. ![Capture du 2019-09-17 22-38-53.png](https://archive.blender.org/developer/F7753923/Capture_du_2019-09-17_22-38-53.png) **Exact steps for others to reproduce the error** [bug_rnd_color.blend](https://archive.blender.org/developer/F7753925/bug_rnd_color.blend) Open the selected .blend and display random colors with the workbench engine. The bottom row of cubes are white and the others one display random colors.
Author

Added subscriber: @sozap

Added subscriber: @sozap
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Ah, good catch. Seems to be logical that Solid would to a certain account use the settings in the shading pop-over.
Also I would expect that the chosen colors would be used when displaying a single object as solid.

Ah, good catch. Seems to be logical that Solid would to a certain account use the settings in the shading pop-over. Also I would expect that the chosen colors would be used when displaying a single object as solid.

This issue was referenced by fde8682d96

This issue was referenced by fde8682d96d44f7600d69aae23dac36f584afd9e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jeroen Bakker self-assigned this 2019-09-20 11:27:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69995
No description provided.