Fix T69995: Object Drawtype Set To Solid Issues

When setting an object draw type to Solid it always used the Material
color mode. This change only sets the material color when the viewport
is set to display textures.